<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alandalus.luisaparragarcia.interfazusuario.CheckRadio">
    <CheckBox android:id="@+id/ChkMarcame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcame"
        android:checked="false"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/LblSeleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_opcion_seleccionada"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/ChkMarcame" />

    <RadioGroup
        android:id="@+id/GrbGrupo1"
        android:layout_width="216dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="33dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/LblSeleccion"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LblSeleccion"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <RadioButton
            android:id="@+id/RbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_1" />

        <RadioButton
            android:id="@+id/RbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_2" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
